--- a/requirements_mt5.txt
+++ b/requirements_mt5.txt
@@ -1,6 +1,8 @@
-MetaTrader5==5.0.44
-pandas==1.5.3
-numpy==1.24.3
-matplotlib==3.7.1
-ta==0.10.2  # Technical analysis library
+MetaTrader5>=5.0.33
+pandas>=1.3.0
+numpy>=1.20.0
+matplotlib>=3.4.0
+scikit-learn>=1.0.0
+ta-lib>=0.4.0
+scipy>=1.7.0
 pytz==2023.3 
