--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,65 @@
-# Core data science packages
+# Base dependencies
 numpy==1.24.3
 pandas==2.0.2
-scikit-learn==1.3.0
-matplotlib==3.7.2
+matplotlib==3.7.1
+plotly==5.15.0
+dash==2.11.1
+dash-bootstrap-components==1.4.1
+dash-daq==0.5.0
+
+# Optimization algorithms
+scikit-learn==1.2.2
+scikit-optimize==0.9.0
+hyperopt==0.2.7
+optuna==3.2.0
+pymoo==0.6.0.1
+deap==1.4.1
+bayesian-optimization==1.4.3
+
+# Machine learning
+tensorflow==2.12.0
+joblib==1.2.0
+xgboost==1.7.5
+lightgbm==4.0.0
+catboost==1.2.0
+statsmodels==0.14.0
+
+# Data processing
+tqdm==4.65.0
+pytz==2023.3
+ta==0.10.2  # Technical Analysis library
+
+# Visualization
+seaborn==0.12.2
+
+# Utilities
+PyYAML==6.0
+python-dateutil==2.8.2
+psutil==5.9.5
+pathos==0.3.0  # For parallel processing
+
+# For backtesting
+backtesting==0.3.3
+
+# For dashboard
+dash-extensions==1.0.1
+dash-ag-grid==2.0.0
+
+# For metrics
+empyrical==0.5.5  # Financial risk metrics
+
+# Optional: For storing results
+h5py==3.8.0
+tables==3.8.0
 
 # Trading & data processing
 MetaTrader5==5.0.45
-pytz==2023.3
 python-dotenv==1.0.0
 
 # ML & API integration
 openai==1.3.7
 backoff==2.2.1
 requests==2.31.0
-
-# Utilities
-tqdm==4.66.1
-colorama==0.4.6
-asyncio==3.4.3
 
 # Configuration and validation
 pydantic==2.4.2
