--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,12 @@ numpy==1.24.3
 pandas==2.0.2
 matplotlib==3.7.1
 plotly==5.15.0
-dash==2.11.1
+dash==2.14.1
 dash-bootstrap-components==1.4.1
 dash-daq==0.5.0
 
 # Optimization algorithms
-scikit-learn==1.2.2
+scikit-learn==1.3.0
 scikit-optimize==0.9.0
 hyperopt==0.2.7
 optuna==3.2.0
@@ -19,13 +19,13 @@ bayesian-optimization==1.4.3
 # Machine learning
 tensorflow==2.12.0
 joblib==1.2.0
-xgboost==1.7.5
+xgboost==2.0.0
 lightgbm==4.0.0
 catboost==1.2.0
 statsmodels==0.14.0
 
 # Data processing
-tqdm==4.65.0
+tqdm==4.66.1
 pytz==2023.3
 ta==0.10.2  # Technical Analysis library
 
@@ -66,4 +66,7 @@ pydantic==2.4.2
 
 # Testing and development
 pytest==7.4.0
-pytest-asyncio==0.21.1 
+pytest-asyncio==0.21.1
+
+# Added from the code block
+scipy==1.11.3 
