--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 # Base dependencies
-numpy==1.24.3
-pandas==2.0.2
-matplotlib==3.7.1
+numpy>=1.20.0
+pandas>=1.3.0
+matplotlib>=3.4.0
 plotly==5.15.0
 dash==2.14.1
 dash-bootstrap-components==1.4.1
 dash-daq==0.5.0
 
 # Optimization algorithms
-scikit-learn==1.3.0
+scikit-learn>=1.0.0
 scikit-optimize==0.9.0
 hyperopt==0.2.7
 optuna==3.2.0
@@ -25,7 +25,7 @@ catboost==1.2.0
 statsmodels==0.14.0
 
 # Data processing
-tqdm==4.66.1
+tqdm>=4.62.0
 pytz==2023.3
 ta==0.10.2  # Technical Analysis library
 
