--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
-MetaTrader5==5.0.45
-pandas==2.1.4
-numpy==1.26.3
-pytz==2023.3
-TA-Lib==0.4.28 
+numpy>=1.19.0
+pandas>=1.0.0
+matplotlib>=3.3.0
+scikit-learn>=0.24.0
+xgboost>=1.3.0
+python-dotenv>=0.15.0
+requests>=2.25.0
+scipy>=1.6.0
+joblib>=1.0.0
+psutil>=5.8.0
+SQLAlchemy>=1.4.0
+PyYAML>=5.4.0
+python-dateutil>=2.8.1
+pytz>=2021.1
+MetaTrader5>=5.0.34 # Only available on Windows 
